cif/org.eclipse.escet.cif.tests/tests/checks/EqnNotAllowedCheck.cif.check.err
ERROR: CIF checks tester failed due to unsatisfied preconditions:
  --------------------------
  (1/1) An equation is used.
  --------------------------
   * In the top-level scope of the specification:
     - equation q' = q_der;
                   ^
   * In group "g":
     - equation x' = 2.0;
                   ^
   * In automaton definition "g.A":
     - equation z1' = 4.0;
                    ^
     - equation z2' = 5.0;
                    ^
   * In group definition "g.G":
     - equation e' = x';
                   ^
   * In automaton "g.a":
     - equation y' = 3.0;
                   ^
   * In location "g.a.U":
     - equation y2' = 4.0;
                    ^
